--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,7 @@ jobs:
           name: Build
           command: |
             npm run build
+      - run:
+          name: Deploy
+          command: |
+            npm run deploy
