--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,14 @@
 version: 2.1
 orbs:
   node: circleci/node@4.1.0
-  aws-cli: circleci/aws-cli@2.0.3
+  aws-cli: circleci/aws-cli@3.1.1
 jobs:
   build:
     docker:
       - image: "cimg/base:stable"
     steps:
       - node/install
+      - aws-cli/install
       - checkout
       - run:
           name: Install
